# sndv-scalpel

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Containerfile  README.md  SECURITY.md  SKILL.md  clippy.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: scalpel.yaml
docs/: architecture.md  compliance-and-proof.md  design-decisions.md  development-guidelines.md  extension-guide.md  features-and-issues.md  integration-e2e.md  language-support.md  llm-usage.md  quickstart.md  release-artifacts.md  usage-guide.md
scripts/: build-matrix.sh  build.sh  ensure-scalpel.sh  fmt.sh  generate-usage-guide.sh  handle.sh  install-from-github.ps1  install-from-github.sh  install-hooks.sh  package-matrix.sh  package-release.sh  podman-e2e.sh  test.sh
src/: app.rs  cli.rs  config.rs  constants.rs  error.rs  lang.rs  lib.rs  main.rs  model.rs  query.rs  transaction.rs
src/commands/: completion.rs  find.rs  info.rs  mod.rs  patch.rs  peek.rs  util.rs  view.rs
src/parser/: data_parser.rs  mod.rs  regex_parser.rs  stream_io.rs
tests/: cli_integration.rs  format_ops.rs  heavy_paths.rs  peek_completion.rs  transaction_chaos.rs
tests/fixtures/: sample-complex.ts  sample-import-groups.go  sample.go  sample.js  sample.json  sample.jsonl  sample.lua  sample.md  sample.rs  sample.toml  sample.ts  sample.txt  sample.yaml
tests/fixtures/big/: events-10k.jsonl  large-service.go  large-service.rs
