[package]
name = "sndv-scalpel"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Production-ready structural-aware multi-language code editing CLI"

[[bin]]
name = "scalpel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
futures = "0.3"
globset = "0.4"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
similar = { version = "2.6", features = ["unicode"] }
thiserror = "2.0"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "1.0"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[clippy]
warn = [
    "cognitive_complexity",
    "cyclomatic_complexity",
    "too_many_lines",
    "missing_docs",
    "single_char_lifetime_params_in_generics",
    "many_single_char_names",
]